Refactor Role and User domain models
Updated Role.getAuthorities() to include permission-based authorities and the role authority. Changed User.role from String to Role enum and implemented getPassword and getUsername methods for UserDetails compliance.