@@ -7,6 +7,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public enum Role {
@@ -27,10 +28,12 @@ public enum Role {
         private final Set<Permission> permissions;
 
         public List<SimpleGrantedAuthority> getAuthorities() {
-            return getPermissions()
-                    .stream()
-                    .map(permission ->  new SimpleGrantedAuthority("ROLE_"+this.name()))
-                    .toList();
-        }
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 
 }
